<resources>
    <string name="app_name">Opti Stock</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="create_a_password">Create a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="don_t_remember_your_password_forget_it">Don\'t remember your password? forget it.</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="don_t_have_any_account_sign_up">Don\'t have any account ? Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_email_or_username">Enter your Email or Username</string>
    <string name="todo">TODO</string>
    <string name="opti_stock">Opti Stock</string>
    <string name="Sign_up_before_using_Opti_Stocks">Sign up before using Opti Stocks</string>
    <string name="opti_stocks">Opti Stocks</string>
    <string name="the_optimal_solutionfor_inventory">The optimal solution for Inventory</string>
    <string name="TODO">TODO</string>
    <string name="warehouse">Warehouse</string>
    <string name="location">location</string>
    <string name="add_warehouse">Add Warehouse</string>
    <string name="add">ADD</string>
    <string name="Location">Location</string>
    <string name="warehouse_name">Warehouse Name</string>
    <string name="enter_warehouse_name">Enter warehouse name</string>
    <string name="enter_location">Enter location</string>
    <string name="view_stocks">View Stocks</string>
    <string name="suppliers">Suppliers</string>
    <string name="add_product">Add Product</string>
    <string name="remove_pro">Remove Pro.</string>
    <string name="analysis">Analysis</string>
    <string name="user_name">user_name</string>
    <string name="log_out">Log out</string>

</resources>