<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_background_color"
    tools:context=".signup">


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:background="@drawable/wave_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <ImageView
        android:layout_width="82dp"
        android:layout_height="83dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/TODO" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="87dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/future"
        android:text="@string/Sign_up_before_using_Opti_Stocks"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="479dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/future"
            android:gravity=""
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/editor_background_design"
                android:fontFamily="@font/future"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/future"
            android:gravity=""
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/editor_background_design"
                android:fontFamily="@font/future"
                android:hint="@string/enter_your_email"
                android:inputType="textPersonName"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="TextFields,TextSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/future"
            android:gravity=""
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/editor_background_design"
                android:fontFamily="@font/future"
                android:hint="@string/create_a_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/editor_background_design"
                android:fontFamily="@font/future"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/future"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Textview_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/future"
            android:gravity="center"
            android:text="@string/already_have_an_account_sign_in"
             />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>