<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background_color"
    tools:context=".warehouseAdd">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@drawable/wave_3_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/future"
        android:text="@string/add_warehouse"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="353dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/future"
            android:gravity=""
            android:text="@string/warehouse_name"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/warehouseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:autofillHints=""
                android:background="@drawable/editor_background_design"
                android:fontFamily="@font/future"
                android:hint="@string/enter_warehouse_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/future"
            android:gravity=""
            android:text="@string/Location"
            android:textColor="@color/black"
            android:textSize="28sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/locationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:autofillHints=""
                android:background="@drawable/editor_background_design"
                android:fontFamily="@font/future"
                android:hint="@string/enter_location"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/future"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:ignore="TextSizeCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>